# nbox

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile.release  KNOWN_ISSUES.md  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  SKILL.md  deny.toml
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  netbox-integration.yml  release.yml  security.yml  skills-lint.yml
docs/: ARCHITECTURE.md  BENCHMARKS.md  CI.md  COMPARISON.md  COMPATIBILITY.md  CONFIG.md  FEATURES.md  MCP.md  POSITIONING.md  SCRIPTING.md  TROUBLESHOOTING.md  demo.tape
docs/adr/: 0001-safe-write-foundation.md  0002-local-single-user-mcp-writes.md  README.md
examples/: README.md  config.toml
packaging/homebrew/: nbox.rb
scripts/: bench-coldstart.sh  gen_schema_snapshot.py  install.sh  lint_skills.sh  smoke.sh
skills/device-context/: SKILL.md
skills/ipam-allocate/: SKILL.md
skills/ipam-read/: SKILL.md
skills/patch-writes/: SKILL.md
skills/search/: SKILL.md
skills/serve/: SKILL.md
skills/tag-writes/: SKILL.md
skills/writes/: SKILL.md
src/: cli.rs  config.rs  error.rs  lib.rs  mac.rs  main.rs  secret.rs  update.rs
src/cache/: key.rs  mod.rs  orchestrator.rs  sqlite.rs  store.rs
src/domain/: aggregate_view.rs  asn_view.rs  circuit_view.rs  cluster_view.rs  contact_view.rs  custom.rs  detail.rs  device_detail.rs  device_view.rs  history_view.rs  interface_view.rs  ip_range_view.rs  ip_view.rs  journal_view.rs  mac_view.rs  mod.rs  prefix_view.rs  provider_view.rs  rack_group_view.rs  rack_view.rs  route_target_view.rs  site_view.rs  tag_view.rs  tagged_view.rs  tenant_view.rs  util.rs  virtual_circuit_view.rs  vlan_view.rs  vm_type_view.rs  vm_view.rs  vrf_view.rs
src/export/: mod.rs
src/mcp/: audit.rs  http.rs  mod.rs  oidc.rs  prompts.rs  tests.rs  vault.rs  write.rs
src/netbox/: auth.rs  browse.rs  capabilities.rs  choices.rs  client.rs  dashboard.rs  endpoints.rs  graphql.rs  mod.rs  mutation.rs  pagination.rs  prefix_tree.rs  query.rs  rack_elevation.rs  search.rs  status.rs  write_audit.rs
src/netbox/models/: circuits.rs  common.rs  dcim.rs  extras.rs  ipam.rs  mod.rs  tenancy.rs  virtualization.rs
src/output/: csv.rs  json.rs  mod.rs  plain.rs
src/tui/: app.rs  cheese.rs  config_modal.rs  events.rs  filter_modal.rs  fuzzy.rs  mod.rs  onboarding.rs  palette.rs  profile_token.rs  state.rs  term.rs  theme.rs  ui.rs
src/util/: format.rs  mod.rs
tests/: broken_pipe_tests.rs  circuit_path_tests.rs  client_tests.rs  compat_tests.rs  csv_contracts_tests.rs  custom_fields_tests.rs  error_contract_tests.rs  export_tests.rs  golden_output_tests.rs  it_netbox.rs  journal_inline_tests.rs  mcp_serve_http_tests.rs  mcp_serve_tests.rs  no_tui_tests.rs  observability_contracts_tests.rs  output_flags_tests.rs  pagination_tests.rs  perf_baseline_tests.rs  query_tests.rs  scope_tests.rs  search_tests.rs  write_tests.rs
tests/golden/: device_detail.json  interface.json  ip.json  journal.json  prefix.json  search.json  site.json  status.json  vlan.json  vrf_detail.json
tests/integration/: README.md  docker-compose.yml  resolve-token.sh  seed-demo.py  seed.py  wait-for-ready.sh
tests/schema/: netbox-4.6.2.json
tests/support/: binary.rs  fixtures.rs  json_contract.rs  mod.rs  netbox.rs  serve.rs
