[package]
name = "nbox"
version = "0.1.1"
edition = "2024"
rust-version = "1.95"
description = "Terminal UI and CLI for NetBox — fast search, IPAM lookups, and device context"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lance0/nbox"
homepage = "https://github.com/lance0/nbox"
readme = "README.md"
keywords = ["netbox", "network", "ipam", "tui", "dcim"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
nucleo = "0.5"
# Polished widgets (Input cursor editing for search/palette). Pinned: 0.7.0
# targets ratatui ^0.30, matching nbox — confined behind the cheese adapter
# layer in `src/tui/cheese.rs`.
ratatui-cheese = "=0.7.0"
# Display width of glyphs, to place the terminal cursor on the cheese input the
# same way cheese lays it out (already in the tree via ratatui/cheese).
unicode-width = "0.2"

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4.6"
clap_mangen = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# JSON Schema derivation for MCP tool output schemas. Pinned to the exact
# version rmcp 1.7 depends on so `Json<T>` accepts our `JsonSchema` types
# (the trait bound is satisfied only by that one schemars instance).
schemars = "=1.2.1"
toml = "1"
toml_edit = "0.25"

# Config and paths
dirs = "6"

# Errors and logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Reserved for planned file logging (non-blocking writer / rolling log files).
# Intentionally kept though not yet referenced — do not strip in a dep cleanup.
tracing-appender = "0.2"

# Terminal helpers
is-terminal = "0.4"
arboard = { version = "3", optional = true }
open = "5"

# IP/network handling
ipnet = "2"

# Caching, later
rusqlite = { version = "0.40", features = ["bundled"], optional = true }

# Update notifications, later
update-informer = { version = "1", default-features = false, features = ["github", "ureq", "rustls-tls"], optional = true }

# MCP server (`nbox serve`) — read-only tools over stdio
rmcp = { version = "1.7", default-features = false, features = ["server", "macros", "transport-io"] }

# Unix syscalls — used in `main` to reset the SIGPIPE disposition to SIG_DFL so a
# closed stdout pipe (e.g. `nbox … | head`) terminates the process normally
# instead of panicking. Already in the tree transitively; declared here so the
# direct use is explicit and version-controlled. (Must stay AFTER the plain
# [dependencies] above, or it swallows the entries below it — that broke the
# Windows release build once already.)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["clipboard"]
clipboard = ["dep:arboard"]
cache = ["dep:rusqlite"]
updates = ["dep:update-informer"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
insta = "1"
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
